--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Python
 __pycache__/
+*/__pycache__/
+src/__pycache__/
+src/**/__pycache__/
 *.py[cod]
 *$py.class
 
@@ -155,6 +158,8 @@ cython_debug/
 
 # Project specific
 *.log
+*/logs/
+src/logs/
 *.txt
 cookie.txt
 env.json
